port changed to 3000

--- a/views/admin/adminpannel.ejs
+++ b/views/admin/adminpannel.ejs
@@ -465,7 +465,7 @@
       <h3>Add Custom Terminal or Unit Test</h3>
       <p>View and manage terminal or test details</p>
     </a>
-     <a href="/admin/studentrecord" class="dashboard-card">
+     <a href="/studentrecord" class="dashboard-card">
      <i class="fa-solid fa-user-plus" style="color: #74C0FC;"></i>
       <h3>Add Student records</h3>
       <p>View and manage student records</p>
