--- a/views/index.ejs
+++ b/views/index.ejs
@@ -368,8 +368,8 @@
 </head>
 <body>
     <header>
-        <%- include('partials/nav',{currentPage:'home'}) %>
-        
+   <img src="/image.png" alt="AES Logo" class="navbar-logo">
+
         <div class="hero-section">
             <h1 id="firstheading">Answersheet Analysis <span id="firstspan">System</span></h1>
             <span class="subheading">A professional system designed to analyze and evaluate student performance</span>
