--- a/views/index.ejs
+++ b/views/index.ejs
@@ -368,7 +368,7 @@
 </head>
 <body>
     <header>
-   <img src="/image.png" alt="AES Logo" class="navbar-logo">
+        <%- include('partials/nav') %>
 
         <div class="hero-section">
             <h1 id="firstheading">Answersheet Analysis <span id="firstspan">System</span></h1>
