--- a/public/nav.css
+++ b/public/nav.css
@@ -40,7 +40,7 @@
   padding: 0 2rem;
   width: 100%;
   max-width: 1400px;
-  margin: 0 auto;
+  margin: 0 0 0 34%;
   height: 100%;
   color: white;
   position: relative;
