--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,19 +1,13 @@
 
 <nav class="horizontal-navbar">
-
-  <div class="navbar-container">  <center>
+  <div class="navbar-container">
     <div class="navbar-brand">
-      <a href="/">
+     <center><a href="/">
         <img src="/image.png" alt="AES Logo" class="navbar-logo">
-      </a>
+      </a></center> 
       <span class="navbar-title">Answer Analysis System</span>
     </div>
-    
-
-    
-      
   </div>
-</center>
 </nav>
 
 <!-- Make sure Font Awesome is loaded -->
