--- a/views/admin/subjectlist.ejs
+++ b/views/admin/subjectlist.ejs
@@ -473,7 +473,7 @@
   </div>
 
   <div class="form-group">
-    <label for="studentclass">For Class:</label>
+    <label for="studentclass">Class:</label>
     <select name="forClass" id="studentclass" class="form-select" >
     <%
       const uniqueClass = new Set(studentClassdata.map(item => item.studentClass));
