--- a/views/admin/crosssheet.ejs
+++ b/views/admin/crosssheet.ejs
@@ -15,6 +15,8 @@
   <!-- DataTables CSS -->
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.5/css/dataTables.bootstrap5.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.1/css/buttons.bootstrap5.min.css">
+  <!-- Navigation CSS -->
+  <link rel="stylesheet" href="/nav.css">
   
   <!-- Custom CSS for skyblue/brown theme -->
   <style>
@@ -419,6 +421,8 @@
   </style>
 </head>
 <body>
+  <%- include('../partials/nav',{currentPage:'admin'}) %>
+  
   <div class="main-container">
     <!-- Include Sidenav -->
     <%- include('../partials/sidenav', { 
