entry detail in piovoted data fixed due to collection only last value

--- a/views/admin/subjectlist.ejs
+++ b/views/admin/subjectlist.ejs
@@ -536,6 +536,7 @@
     <%= editing ? "Update Subject" : "Add New Subject" %>
   </button>
 </form>
+<a href="/">Go to Data Entry</a>
 
 <script>
 // Function to fetch and autofill data from another class
